--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/AddBookmarks.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/AddBookmarks.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>HistoryDialog</class>
- <widget class="QDialog" name="HistoryDialog">
+ <class>AddBookmarks</class>
+ <widget class="QDialog" name="AddBookmarks">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>909</width>
-    <height>498</height>
+    <width>344</width>
+    <height>156</height>
    </rect>
   </property>
   <property name="palette">
@@ -102,55 +102,54 @@
    </palette>
   </property>
   <property name="windowTitle">
-   <string>Feicim File History dialog window</string>
+   <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0">
-    <widget class="QPushButton" name="backButton">
+   <item row="4" column="0" colspan="3">
+    <widget class="QLineEdit" name="pathlineEdit"/>
+   </item>
+   <item row="5" column="1">
+    <widget class="QPushButton" name="okButton">
      <property name="text">
-      <string>Back</string>
+      <string>OK</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
-    <widget class="QPushButton" name="nextButton">
-     <property name="enabled">
-      <bool>true</bool>
-     </property>
+   <item row="5" column="2">
+    <widget class="QPushButton" name="cancelButton">
      <property name="text">
-      <string>Next</string>
+      <string>Cancel</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="2">
-    <widget class="QPushButton" name="closeButton">
+   <item row="5" column="0">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="2" column="0">
+    <widget class="QLabel" name="label_2">
      <property name="text">
-      <string>Close</string>
+      <string>Path:</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="0" colspan="3">
-    <widget class="QGroupBox" name="groupBox">
-     <property name="title">
-      <string/>
+   <item row="1" column="0" colspan="3">
+    <widget class="QLineEdit" name="titlelineEdit"/>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Title:</string>
      </property>
-     <layout class="QGridLayout" name="gridLayout_3">
-      <item row="1" column="1">
-       <widget class="QTableView" name="jobTableView"/>
-      </item>
-      <item row="1" column="0">
-       <widget class="QGroupBox" name="groupBox_2">
-        <property name="title">
-         <string/>
-        </property>
-        <layout class="QGridLayout" name="gridLayout_2">
-         <item row="0" column="0">
-          <widget class="QTableView" name="filesTableView"/>
-         </item>
-        </layout>
-       </widget>
-      </item>
-     </layout>
     </widget>
    </item>
   </layout>
