--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/TreeWidget.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/TreeWidget.ui
@@ -40,6 +40,15 @@
        </color>
       </brush>
      </colorrole>
+     <colorrole role="Link">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>129</red>
+        <green>167</green>
+        <blue>255</blue>
+       </color>
+      </brush>
+     </colorrole>
      <colorrole role="AlternateBase">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
@@ -87,6 +96,15 @@
        </color>
       </brush>
      </colorrole>
+     <colorrole role="Link">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>129</red>
+        <green>167</green>
+        <blue>255</blue>
+       </color>
+      </brush>
+     </colorrole>
      <colorrole role="AlternateBase">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
@@ -131,6 +149,15 @@
         <red>193</red>
         <green>193</green>
         <blue>221</blue>
+       </color>
+      </brush>
+     </colorrole>
+     <colorrole role="Link">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>129</red>
+        <green>167</green>
+        <blue>255</blue>
        </color>
       </brush>
      </colorrole>
