--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/Bookmarks.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/Bookmarks.ui
@@ -182,7 +182,11 @@
         </property>
         <layout class="QGridLayout" name="gridLayout_2">
          <item row="1" column="0" colspan="2">
-          <widget class="QLineEdit" name="lineEdit"/>
+          <widget class="QLineEdit" name="lineEdit">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+          </widget>
          </item>
          <item row="2" column="0">
           <widget class="QTableView" name="bookmarks"/>
