I started to add the data quality to the selection
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@25993 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/MainWidget.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/MainWidget.ui
@@ -57,7 +57,14 @@
     </property>
     <addaction name="actionExit" />
    </widget>
+   <widget class="QMenu" name="menuSetings" >
+    <property name="title" >
+     <string>Setings</string>
+    </property>
+    <addaction name="actionDataQuality" />
+   </widget>
    <addaction name="menuFile" />
+   <addaction name="menuSetings" />
   </widget>
   <widget class="QStatusBar" name="statusbar" />
   <action name="actionExit" >
@@ -68,6 +75,11 @@
   <action name="actionFile_dialog_paging_size" >
    <property name="text" >
     <string>File dialog page size</string>
+   </property>
+  </action>
+  <action name="actionDataQuality" >
+   <property name="text" >
+    <string>DataQuality</string>
    </property>
   </action>
  </widget>
