--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/FileDialog.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/FileDialog.ui
@@ -9,7 +9,7 @@
     <x>0</x>
     <y>0</y>
     <width>813</width>
-    <height>692</height>
+    <height>851</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -187,14 +187,14 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="0" >
+        <item row="5" column="0" >
          <widget class="QLabel" name="label_5" >
           <property name="text" >
            <string>Files size</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="1" >
+        <item row="5" column="1" >
          <widget class="QLineEdit" name="lineEdit_5" >
           <property name="readOnly" >
            <bool>true</bool>
@@ -208,6 +208,26 @@
          <widget class="QLabel" name="label_15" >
           <property name="text" >
            <string>EventInputStat</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1" >
+         <widget class="QLineEdit" name="alltotalluminosity" />
+        </item>
+        <item row="4" column="1" >
+         <widget class="QLineEdit" name="alllumistat" />
+        </item>
+        <item row="3" column="0" >
+         <widget class="QLabel" name="label_17" >
+          <property name="text" >
+           <string>TotalLuminosity</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="0" >
+         <widget class="QLabel" name="label_18" >
+          <property name="text" >
+           <string>Lumistat</string>
           </property>
          </widget>
         </item>
@@ -256,14 +276,14 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="1" >
+        <item row="5" column="1" >
          <widget class="QLineEdit" name="lineEdit_6" >
           <property name="readOnly" >
            <bool>true</bool>
           </property>
          </widget>
         </item>
-        <item row="3" column="0" >
+        <item row="5" column="0" >
          <widget class="QLabel" name="label_3" >
           <property name="text" >
            <string>Files size</string>
@@ -277,6 +297,26 @@
          <widget class="QLabel" name="label_16" >
           <property name="text" >
            <string>EventInputStat</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1" >
+         <widget class="QLineEdit" name="totalluminosity" />
+        </item>
+        <item row="4" column="1" >
+         <widget class="QLineEdit" name="lumistat" />
+        </item>
+        <item row="3" column="0" >
+         <widget class="QLabel" name="label_19" >
+          <property name="text" >
+           <string>TotalLuminosity</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="0" >
+         <widget class="QLabel" name="label_20" >
+          <property name="text" >
+           <string>LumiStat</string>
           </property>
          </widget>
         </item>
