--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/FileDialog.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/FileDialog.ui
@@ -215,7 +215,7 @@
          <widget class="QLineEdit" name="alltotalluminosity" />
         </item>
         <item row="4" column="1" >
-         <widget class="QLineEdit" name="alllumistat" />
+         <widget class="QLineEdit" name="allluminosity" />
         </item>
         <item row="3" column="0" >
          <widget class="QLabel" name="label_17" >
@@ -227,7 +227,7 @@
         <item row="4" column="0" >
          <widget class="QLabel" name="label_18" >
           <property name="text" >
-           <string>Lumistat</string>
+           <string>Luminosity</string>
           </property>
          </widget>
         </item>
@@ -304,7 +304,7 @@
          <widget class="QLineEdit" name="totalluminosity" />
         </item>
         <item row="4" column="1" >
-         <widget class="QLineEdit" name="lumistat" />
+         <widget class="QLineEdit" name="luminosity" />
         </item>
         <item row="3" column="0" >
          <widget class="QLabel" name="label_19" >
@@ -316,7 +316,7 @@
         <item row="4" column="0" >
          <widget class="QLabel" name="label_20" >
           <property name="text" >
-           <string>LumiStat</string>
+           <string>Luminosity</string>
           </property>
          </widget>
         </item>
