I added the maximize. minimize, buttons to the File dialog window. I changed the luminosity value type from integer to float.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@29395 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/FileDialog.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/FileDialog.ui
@@ -2,7 +2,7 @@
  <class>FileDialog</class>
  <widget class="QDialog" name="FileDialog" >
   <property name="windowModality" >
-   <enum>Qt::WindowModal</enum>
+   <enum>Qt::ApplicationModal</enum>
   </property>
   <property name="geometry" >
    <rect>
